--- a/docker/images/php/Dockerfile
+++ b/docker/images/php/Dockerfile
@@ -12,3 +12,7 @@ RUN chmod +x /usr/local/bin/install-php-extensions \
     && install-php-extensions xdebug
 
 WORKDIR /var/www
+
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+ENTRYPOINT ["entrypoint.sh"]
