--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "doctrine/doctrine-bundle": "^2.15",
     "doctrine/doctrine-migrations-bundle": "^3.4",
     "doctrine/orm": "^3.4",
+    "ramsey/uuid": "^4.9",
     "symfony/console": "7.3.*",
     "symfony/doctrine-messenger": "7.3.*",
     "symfony/dotenv": "7.3.*",
