--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,10 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    App\Application\Cart\Command\CreateCartCommandHandler:
+        tags: [ 'messenger.message_handler' ]
+
     App\Infrastructure\Cart\Symfony\Controller\:
         resource: '../src/Infrastructure/Cart/Symfony/Controller/'
         tags: ['controller.service_arguments']
+
