feat - cart - Add tests for API endpoint to create new cart, update openapi doc and add fixtures

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
             context: ./docker/images/php
             dockerfile: Dockerfile
         container_name: shp-cart-php
+        environment:
+            - XDEBUG_MODE=coverage
         volumes:
             - ./:/var/www
         networks:
