--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -8,4 +8,5 @@ framework:
 when@test:
     framework:
         validation:
+            enable_attributes: true
             not_compromised_password: false
