--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -11,6 +11,8 @@ framework:
                 dsn: 'doctrine://default'
 
         routing:
+
+            'App\Application\Cart\Command\AddItemToCartCommand': sync
             'App\Application\Cart\Command\CreateCartCommand': sync
 
             'App\Domain\Cart\Events\CartCheckoutEvent': async
