feat - cart - Add controller RemoveItemFromCartController, test and Openapi documentation

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -14,5 +14,6 @@ framework:
 
             'App\Application\Cart\Command\AddItemToCartCommand': sync
             'App\Application\Cart\Command\CreateCartCommand': sync
+            'App\Application\Cart\Command\RemoveItemFromCartCommand': sync
 
             'App\Domain\Cart\Events\CartCheckoutEvent': async
