--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,5 +15,6 @@ framework:
             'App\Application\Cart\Command\AddItemToCartCommand': sync
             'App\Application\Cart\Command\CreateCartCommand': sync
             'App\Application\Cart\Command\RemoveItemFromCartCommand': sync
+            'App\Application\Cart\Command\UpdateItemFromCartCommand': sync
 
             'App\Domain\Cart\Events\CartCheckoutEvent': async
