feat - cart - Add API enpoint to update cart

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,9 @@ services:
     App\Application\Cart\Command\RemoveItemFromCartCommandHandler:
         tags: [ 'messenger.message_handler' ]
 
+    App\Application\Cart\Command\UpdateCartCommandHandler:
+        tags: [ 'messenger.message_handler' ]
+
     App\Application\Cart\Command\UpdateItemFromCartCommandHandler:
         tags: [ 'messenger.message_handler' ]
 
